force-app/main/default/objects/CC_Attendance__c/CC_Attendance__c.object-meta.xml
<CustomObject>
    <description>A junction record combining "who enrolled" (Enrollment) and "which session" (Session), recording attendance for that combination. / 「誰が申し込んだか（受講登録）」×「どの回か（開催回）」の交点となるジャンクションレコード。</description>
    <label>Attendance</label>
    <nameField>
        <displayFormat>ATD-{0000000}</displayFormat>
        <label>Attendance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>