force-app/main/default/objects/CC_Attendance__c/fields/Attended__c.field-meta.xml
<CustomField>
    <fullName>Attended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the learner attended this session. / 当該回に出席したかどうか。</description>
    <inlineHelpText>Check if the learner attended. / 出席していればチェックしてください。</inlineHelpText>
    <label>Attended</label>
    <type>Checkbox</type>
</CustomField>