force-app/main/default/objects/CC_Attendance__c/fields/CC_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>CC_Enrollment__c</fullName>
    <description>Which enrollment this attendance record belongs to. / どの受講登録（申込）に基づくか。</description>
    <inlineHelpText>Select the related enrollment. / 対象の受講登録を選択してください。</inlineHelpText>
    <label>Enrollment</label>
    <referenceTo>CC_Enrollment__c</referenceTo>
    <relationshipLabel>Attendance Records</relationshipLabel>
    <relationshipName>Attendance_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>