force-app/main/default/objects/CC_Attendance__c/fields/CC_Session__c.field-meta.xml
<CustomField>
    <fullName>CC_Session__c</fullName>
    <description>Which session this attendance record is for. / どの回の記録か。</description>
    <inlineHelpText>Select the related session. / 対象の開催回を選択してください。</inlineHelpText>
    <label>Session</label>
    <referenceTo>CC_Session__c</referenceTo>
    <relationshipLabel>Attendance Records</relationshipLabel>
    <relationshipName>Attendance_Records</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>