force-app/main/default/objects/CC_Attendance__c/fields/LearnerComment__c.field-meta.xml
<CustomField>
    <fullName>LearnerComment__c</fullName>
    <description>The learner&apos;s comment for this session. / 受講者の所感。</description>
    <inlineHelpText>Enter the learner&apos;s comment for this session, if any. / この回についての受講者コメントがあれば記載してください。</inlineHelpText>
    <label>Learner Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>