force-app/main/default/objects/CC_Attendance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CC_Enrollment__c</columns>
    <columns>CC_Session__c</columns>
    <columns>Attended__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>